survey/static/css/application.less
.right{
  float: right !important;
}

.left{
  float: left !important;
}

.radio_field{
  label{
  display: inline;
  }
  ul li{
    display: inline;
    list-style-type: none;
  }
}

label.error{
  color: red;
  display: inline;
  padding-left: 5px;
}

#location-widget{
  margin: 0;
  & > li{
    list-style: none;
    float: left;
    margin-right: 10px;
    label{
      display: block;
      font-weight: bold;
    }
  }
}

#download-csv-form{
  margin-top: 20px;
  button{
    margin-left: 10px;
    position: relative;
    top: -5px;
  }
}

#aggregates-form{
  button{
    margin-left: 5px;
    position: relative;
    top: 20px;
  }
}

.batch-list-container{
  padding-top: 70px;
  button{
    margin-top: -50px;
    position: relative;
    margin-left: 5px;
  }
}

#bulk-sms-form{
  label{
    margin-bottom: 5px;
  }
  textarea{
    width: 100%;
  }
}

.details{
  width: 100%;
  overflow: hidden;
  dt{
    float: left;
    width: 25%;
    text-align: right;
    margin-right: 3%;
  }
  dd{
    float: left;
    width: 72%;
    margin: 0;
  }

  dt, dd{
    margin-bottom: 10px;
  }
}

#household-occupation{
  margin-right: 10px;
}

.chart{
    min-height: 400px;
}

#results-location-widget{
  button{
    margin-top: 20px;
  }
}

#add_batch{
    margin-bottom: 10px;
}

.alert_confirm{
    color: red !important;
    font-weight: bold !important;
}

